<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
<PreferenceScreen android:key="pac_logo"
                          android:layout="@layout/logo_row" />
<PreferenceCategory android:title="@string/pref_abt_head">
    <Preference android:key="web" android:title="@string/pref_abt_web" android:summary="@string/pref_abt_web_cap"/>
    <Preference android:key="irc" android:summary="@string/pref_abt_irc_cap" android:title="@string/pref_abt_irc"/>
    <Preference android:key="google" android:summary="@string/pref_abt_google_cap" android:title="@string/pref_abt_google"/>
    <Preference android:key="facebook" android:summary="@string/pref_abt_facebook_cap" android:title="@string/pref_abt_facebook"/>
</PreferenceCategory>




    

</PreferenceScreen>
