<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_ota_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/pacman_header" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/tv_ota_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="false"
        android:text="@string/tv_type_tittle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sp_ota_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_ota_type"
        android:layout_alignRight="@id/tv_ota_type"
        android:layout_below="@id/tv_ota_type"
        android:layout_centerVertical="false"
        android:entries="@array/ota_types"
        android:spinnerMode="dropdown" />
    
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/iv_ota_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/likeboss" />

        <TextView
            android:id="@+id/tv_ota_rom_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/ota_cur_lbl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_ota_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ota_rom_header"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Galaxy Nexus - JOP40D" />

        <TextView
            android:id="@+id/tv_ota_remove_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ota_device"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/ota_avail_lbl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_ota_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ota_remove_header"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/ota_checking" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="vertical"
            android:paddingTop="16dip"
            android:showDividers="beginning" >

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureWithLargestChild="true"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/leftSpacer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_ota_down"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/ota_download" />

                <Button
                    android:id="@+id/bt_ota_flash"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:filterTouchesWhenObscured="true"
                    android:maxLines="2"
                    android:text="@string/ota_flash" />

                <LinearLayout
                    android:id="@+id/rightSpacer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_ota_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ota_update"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="TextView" />

    </RelativeLayout>

</LinearLayout>